<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="com.example.android.podcastapp.Newest">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/recommendedDescription"
            android:textColor="@color/textColor" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="20dp"
            android:text="@string/songOne"
            android:textColor="#FFF"
            android:textSize="22sp" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:numStars="5"
            android:rating="4.5"
            android:stepSize="0.5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:padding="20dp"
            android:text="@string/songTwo"
            android:textColor="#FFF"
            android:textSize="22sp" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:numStars="5"
            android:rating="5"
            android:stepSize="0.5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="20dp"
            android:text="@string/songThree"
            android:textColor="#FFF"
            android:textSize="22sp" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:numStars="5"
            android:rating="4"
            android:stepSize="0.5" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/seePlayer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/player"
                android:textColor="#FFF" />

            <TextView
                android:id="@+id/seeNewest"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:gravity="center"
                android:text="@string/newest"
                android:textColor="#FFF" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>